Fix for 100vh on mobile
Use -webkit-fill-available for height on HTML, canvas.
Fixes the document going off the screen on mobile Safari

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 html {
     font-size: 100%;
     font-family: 'Noto Sans JP', sans-serif;
+    height: -webkit-fill-available;
 }
 
 body {
     margin: 0;
     height: 100vh;
+    height: -webkit-fill-available;
     background-color: #f8f8ff;
     color: #e27d60;
 }
